--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html{
 
 .cont-int{
     width: 100%;
-    transition: transform .5s;
+    transition: transform 0.5s;
 }
 
 .cont-int figure img:hover{
